--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,1 +1,20 @@
+<% if @category.errors.count > 0 %>
+  <div class="alert alert-error">
+    <%= "#{pluralize(@category.errors.count, 'error')} prevented this form from being submitted:" %>
+    <ul>
+    <% @category.errors.each do |key, value| %>
+      <li><%= "#{key}: #{value}" %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
+<% flash.each do |key, value| %>
+  <div class="alert alert-<%= key %>">
+    <%= value %>
+  </div>
+<% end %>
+
 <%= render 'category_form' %>
+<h4>Current Categories</h4>
+<%= render 'category_list' %>
