--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,10 +39,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">BDT Docs</a>
+          <a class="brand" href="<%= root_path %>">BDT Docs</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
+              <li class="active"><a href="<%= documents_path %>">All</a></li>
               <li><a href="/documents/new">New</a></li>
               <li><a href="#contact">Contact</a></li>
               <li class="dropdown">
