--- a/app/views/documents/_document_form.html.erb
+++ b/app/views/documents/_document_form.html.erb
@@ -11,7 +11,7 @@
 
 <%= form_for @document do |f| %>
   <%= f.label :category %>
-  <%= collection_select(:document, :category_id, Category.all, :id, :name) %>
+  <%= collection_select(:document, :category_id, Category.order('name').all, :id, :name) %>
   <%= f.label :title %>
   <%= f.text_field :title %>
   <%= f.label :body %>
